cmake_minimum_required(VERSION 3.6)
project(GmodLuaHax)
add_library(LUA_SHARED SHARED IMPORTED)
add_library(tier0 SHARED IMPORTED)
add_library(libsteam_api SHARED IMPORTED)
add_library(client SHARED IMPORTED)
add_library(server SHARED IMPORTED)
#add_library( libsteam_api.dylib)
#add_library( libsteam_api.dylib)
include_directories(include)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -m32")
set(SOURCE_FILES main.cpp)
add_executable(GmodLuaHax ${SOURCE_FILES})
link_directories(".")
link_directories("GarrysMod/bin")
link_directories("GarrysMod/garrysmod/bin")
SET_PROPERTY(TARGET LUA_SHARED PROPERTY IMPORTED_LOCATION /Users/jfmmeyers/Library/Application\ Support/Steam/steamapps/common/GarrysMod/garrysmod/bin/lua_shared.dylib)
SET_PROPERTY(TARGET tier0 PROPERTY IMPORTED_LOCATION /Users/jfmmeyers/Library/Application\ Support/Steam/steamapps/common/GarrysMod/bin/libtier0.dylib)
SET_PROPERTY(TARGET libsteam_api PROPERTY IMPORTED_LOCATION /Users/jfmmeyers/Library/Application\ Support/Steam/steamapps/common/GarrysMod/bin/libsteam_api.dylib)
SET_PROPERTY(TARGET client PROPERTY IMPORTED_LOCATION /Users/jfmmeyers/Library/Application\ Support/Steam/steamapps/common/GarrysMod/garrysmod/bin/client.dylib)
SET_PROPERTY(TARGET server PROPERTY IMPORTED_LOCATION /Users/jfmmeyers/Library/Application\ Support/Steam/steamapps/common/GarrysMod/garrysmod/bin/server.dylib)

target_link_libraries(GmodLuaHax LUA_SHARED tier0 libsteam_api client server)


